# fastapi-demo

./: Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
fastapi_demo/: main.py
