[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
httpx = "^0.19.0"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.25"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
